<resources>
    <!-- Log in logic -->
    <string name="app_name">Network Scanner</string>
    <string name="title_activity_login">Login</string>
    <string name="action_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Register logic -->
    <string name="long_press_faq">LONG PRESS HERE TO READ FAQ</string>
    <string name="faq_text">Network Scanner is a free app designed to scan network devices via IP, exclusively available to users aged 18 and over. This app must be used ethically, and all responsibility rests with the user. You must agree to these terms by checking the appropriate box before registering an account.</string>
    <string name="register_failed">"Registration failed"</string>
    <string name="invalid_email">Invalid e-mail</string>
</resources>